getting max mem usage

--- a/glsearch.ipynb
+++ b/glsearch.ipynb
@@ -46,13 +46,10 @@
     "    args = command.split()\n",
     "    proc = subprocess.Popen(args, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)\n",
     "    proc_pid = proc.pid\n",
-    "    mem_running_avg = 0.0\n",
-    "    num_readings = 0\n",
+    "    mem_max = 0.0\n",
     "    while proc.poll() == None:\n",
-    "        total = (mem_running_avg * num_readings) + (resource.getrusage(resource.RUSAGE_CHILDREN).ru_maxrss / rusage_denom)\n",
-    "        num_readings += 1\n",
-    "        mem_running_avg = total / num_readings\n",
-    "    return (mem_running_avg, proc.communicate())"
+    "        mem_max = max(mem_max, (resource.getrusage(resource.RUSAGE_CHILDREN).ru_maxrss / rusage_denom))\n",
+    "    return (mem_max, proc.communicate())"
    ]
   },
   {
@@ -77,10 +74,10 @@
     "        in2.write(seq2)\n",
     "    start_time = time.time()\n",
     "    print(start_time)\n",
-    "    mem_avg, output = runglsearch(glsearch_exec, glsearch_file_seq1, glsearch_file_seq2)\n",
+    "    mem_max, output = runglsearch(glsearch_exec, glsearch_file_seq1, glsearch_file_seq2)\n",
     "    time_str = output[0][output[0].find(b'Total Scan time:'):]\n",
     "    print(\"for length: \" + str(len(seq1)))\n",
-    "    print('average mem usage (MB): ' + str(mem_avg))\n",
+    "    print('maximum resident set size (MB): ' + str(mem_max))\n",
     "    print('time taken: ' + str(float(time_str.split()[3])))\n",
     "    time_taken = time.time() - start_time\n",
     "    print('time measured: ' + str(time_taken))"
@@ -115,52 +112,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1544988371.2984462\n",
+      "1544988963.229865\n",
       "for length: 100\n",
-      "average mem usage (MB): 0.78515625\n",
+      "maximum resident set size (MB): 0.80078125\n",
       "time taken: 0.0\n",
-      "time measured: 0.03107285499572754\n",
-      "1544988371.3308392\n",
+      "time measured: 0.022172927856445312\n",
+      "1544988963.254122\n",
       "for length: 500\n",
-      "average mem usage (MB): 6.72265625\n",
+      "maximum resident set size (MB): 6.6953125\n",
       "time taken: 0.0\n",
-      "time measured: 0.03380775451660156\n",
-      "1544988371.366832\n",
+      "time measured: 0.02872300148010254\n",
+      "1544988963.284572\n",
       "for length: 1000\n",
-      "average mem usage (MB): 9.546875\n",
+      "maximum resident set size (MB): 9.609375\n",
       "time taken: 0.01\n",
-      "time measured: 0.05371880531311035\n",
-      "1544988371.431369\n",
+      "time measured: 0.059906005859375\n",
+      "1544988963.35548\n",
       "for length: 2000\n",
-      "average mem usage (MB): 9.546875\n",
+      "maximum resident set size (MB): 9.609375\n",
       "time taken: 0.01\n",
-      "time measured: 0.15164995193481445\n",
-      "1544988371.5946329\n",
+      "time measured: 0.15380406379699707\n",
+      "1544988963.5197031\n",
       "for length: 3000\n",
-      "average mem usage (MB): 13.78125\n",
+      "maximum resident set size (MB): 13.76953125\n",
       "time taken: 0.02\n",
-      "time measured: 0.3058791160583496\n",
-      "1544988371.912939\n",
+      "time measured: 0.2913646697998047\n",
+      "1544988963.822397\n",
       "for length: 4000\n",
-      "average mem usage (MB): 18.9375\n",
+      "maximum resident set size (MB): 18.94140625\n",
       "time taken: 0.04\n",
-      "time measured: 0.5473599433898926\n",
-      "1544988372.480695\n",
+      "time measured: 0.5469658374786377\n",
+      "1544988964.3891919\n",
       "for length: 2000\n",
-      "average mem usage (MB): 24.14453125\n",
+      "maximum resident set size (MB): 24.0703125\n",
       "time taken: 0.01\n",
-      "time measured: 0.15391302108764648\n",
-      "1544988372.664143\n",
+      "time measured: 0.13268399238586426\n",
+      "1544988964.541939\n",
       "for length: 3000\n",
-      "average mem usage (MB): 24.14453125\n",
-      "time taken: 0.03\n",
-      "time measured: 0.3813819885253906\n",
-      "1544988373.065696\n",
+      "maximum resident set size (MB): 24.0703125\n",
+      "time taken: 0.02\n",
+      "time measured: 0.3366079330444336\n",
+      "1544988964.89972\n",
       "for length: 4000\n",
-      "average mem usage (MB): 24.14453125\n",
+      "maximum resident set size (MB): 24.0703125\n",
       "time taken: 0.04\n",
-      "time measured: 0.648521900177002\n",
-      "1544988373.7373152\n"
+      "time measured: 0.5484201908111572\n",
+      "1544988965.4688609\n"
      ]
     }
    ],
